# trace

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  changelog.txt  imgui.ini  license.md  readme.md
doc/: setup.sh
lib/fmt/: core.h  format.h
lib/glfw/: gl3w.c  gl3w.h
lib/imgui/: imgui.cpp  imgui.h  imgui_demo.cpp  imgui_impl_glfw.cpp  imgui_impl_opengl3.cpp  imgui_impl_opengl3.h  imgui_widgets.cpp  imstb_truetype.h
lib/imgui/win/: imgui_impl_glfw.cpp  imgui_impl_opengl3.cpp  imgui_impl_opengl3.h
lib/implot/: implot.cpp
lib/nfde/: nfd_cocoa.m
lib/opengl/: gl3w.c  gl3w.h  glcorearb.h  glfw3.h
lib/picoc/: picoc.h  picoc_clibrary.c  picoc_clibrary.cpp  picoc_config.c  picoc_debug.c  picoc_debug.cpp  picoc_expression.c  picoc_expression.cpp  picoc_heap.c  picoc_heap.cpp  picoc_include.c  picoc_include.cpp  picoc_interpreter.h  picoc_lex.c  picoc_lex.cpp  picoc_parse.c  picoc_parse.cpp  picoc_platform.c  picoc_platform.cpp  picoc_platform.h  picoc_table.c  picoc_table.cpp  picoc_type.c  picoc_type.cpp  picoc_variable.c  picoc_variable.cpp
lib/picoc/cstdlib/: math.c  picoc_ctype.c  picoc_ctype.cpp  picoc_errno.c  picoc_errno.cpp  picoc_math.c  picoc_math.cpp  picoc_stdbool.c  picoc_stdbool.cpp  picoc_stdio.c  picoc_stdio.cpp  picoc_stdlib.c  picoc_stdlib.cpp  picoc_string.c  picoc_string.cpp  picoc_time.c  picoc_time.cpp  stdio.c  stdlib.c  string.c  time.c
lib/sftltrc/: CMakeLists.txt  trcctrl.h  trcdata.h  trcellp.h  trceng.h  trcobj.h  trcproc.h  trcspl.h  trctraj.h  trjtraj.h  trсpack.h
lib/sftltrc/impl/: trcctrl - Copy.h  trcctrl_.h  trcdata_bin.h  trcdata_mat.h  trcdata_ram.h  trcdata_ramld.h  trcdata_text.h  trcproc_euler.h  trcproc_fps.h  trjtraj_bz.h  trjtraj_navsat.h  trjtraj_orb.h  trjtraj_static.h
lib/sftltrc/include/sftltrc/: sftltrc.c  sftltrc.h  trc.c  trc.h  trcctrl.h  trcdata.h  trceng.h  trcobj.h  trcproc.h  trcrefs.h  trcspl.h  trctraj.h
lib/sftltrc/include/sftltrc/impl/: trcctrl - Copy.h  trcctrl_.h  trcctrl_cpos.h  trcctrl_crot.h  trcctrl_deprecated.h  trcctrl_egms.h  trcctrl_gms.h  trcdata_bin.h  trcdata_mat.h  trcdata_ram.h  trcdata_ramld.h  trcdata_text.h  trcobj.h  trcproc_euler.h  trcproc_fps.h  trcrefs_ellp.h  trcrefs_ellp_pz9002.h  trcrefs_epz9002.h  trcrefs_epz9011.h  trcrefs_ewgs84.h  trctraj_bz.h  trctraj_orb.h  trctraj_static.h  trjtraj_bz.h  trjtraj_navsat.h  trjtraj_orb.h  trjtraj_static.h
lib/tcc/: config.h  tcc.h  tccelf.c  tcctok.h
lib/tinymat/: tinymat.cpp  tinymat.h
lib/trj/: geopot07.f  gjson.h  trj_api.h  trj_bz.cpp  trj_bz.h  trj_ctrl.cpp  trj_ctrl.h  trj_ctrl_.h  trj_data.h  trj_data_.h  trj_ellp.h  trj_eng.c  trj_eng.cpp  trj_eng.h  trj_malloc.h  trj_obj.cpp  trj_obj.h  trj_proc.h  trj_traj.cpp  trj_traj.h  trj_traj_.h  trj_types.cpp  trj_types.h  trj_utils.cpp  trj_utils.h  vl.c  vl.cpp  vl.h  vl3d.cpp  vl3d.h  vl_svd.c  vl_svd.cpp  vl_svd.h
plugins/: config  ctrl_test.h  init.h  trj_api.h  trj_bz.c  trj_bz.h  trj_ctrl.c  trj_eng.h  trj_proc.c  trj_test.h  trj_traj.h  trj_utils.c  vl.h  vl3d.cpp  vl3d.h  vl_svd.c  vl_svd.h
res/almanac/: Format.agl  Format.agp  MCCJ_210101.agl  MCCJ_210101.agp
res/fonts/: default_font.h
res/plugins/: config  ctrl_test.h  init.h
res/saves/: default.trj  solsys.trj  static.trj  test.trj
src/: gui.cpp  gui.h  gui_clip.h  gui_cmd.cpp  gui_cmd.h  gui_conf.h  gui_ctrl.h  gui_data.h  gui_eng.h  gui_env.cpp  gui_env.h  gui_impl.h  gui_map.h  gui_menu.h  gui_obj.h  gui_tbar.h  gui_traj.h  gui_w.h  guictrl.h  guidata.h  guitraj.h  imgui_custom.cpp  imgui_custom.h  opengl.cpp  picoc_api.c  picoc_api.cpp  picoc_api.h  picoc_win.c  picoc_win.cpp  picoc_win.h  trj_gui.cpp  trj_gui.h  trj_gui_cmd.cpp  trj_gui_cmd.h  trj_gui_ctrl.cpp  trj_gui_ctrl.h  trj_gui_data.cpp  trj_gui_data.h  trj_gui_eng.cpp  trj_gui_eng.h  (+18 more)
src/impl/: guictrl.h  guictrl_deprecated.h  guictrl_egms.h  guictrl_gms.h  guictrl_varot.h  guitraj.h  guitraj_bz.h  guitraj_bz2.h  guitraj_navsat.h  guitraj_orb.h  guitraj_static.h
src/linux/: trace.cpp
src/mac/: metal.mm
src/mac/macOS/: Info-macOS.plist  MainMenu.storyboard
src/mac/trajectory.xcodeproj/: project.pbxproj
src/mac/trajectory.xcodeproj/project.xcworkspace/xcuserdata/cel.xcuserdatad/: UserInterfaceState.xcuserstate
src/mac/trajectory.xcodeproj/xcshareddata/xcschemes/: trajectory.xcscheme
src/mac/trajectory.xcodeproj/xcuserdata/cel.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
src/mac/trajectory.xcodeproj/xcuserdata/cel.xcuserdatad/xcschemes/: xcschememanagement.plist
src/webgl/: trj_webgl.bat  trj_webgl.cpp  trj_webgl.html  trj_webgl.js
src/win/: trajectory.cpp
